Fixes bug #27 - Overlapping content in the UI

--- a/ProcurementTracker/wwwroot/css/site.css
+++ b/ProcurementTracker/wwwroot/css/site.css
@@ -62,7 +62,7 @@ body{
 }
 
 .footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
@@ -75,8 +75,6 @@ body{
 */
 .menu{
     background-color: #f2f2f2;
-    display: flex;
-    flex: 1 1 auto;
 }
 
 .menu nav{
@@ -85,11 +83,10 @@ body{
 
 .main {
     margin-top: -15px;
-    position: relative;
 }
 
 .full-height {
-    height: calc(100% - 120px);
+    min-height: calc(100% - 120px);
 }
 
 .action-bar{
